@@ -57,6 +57,9 @@ PHP                                                                        NEWS
   . Fixed GH-10011 (Trampoline autoloader will get reregistered and cannot be
     unregistered). (Girgias)
 
+- SQLite3:
+  . Fixed bug #81742 (open_basedir bypass in SQLite3 by using file URI). (cmb)
+
 24 Nov 2022, PHP 8.1.13
 
 - CLI:
